force-app/main/default/objects/ssot__DeviceApplicationTemplate__dlm/fields/ssot__DeviceApplicationTemplateBodyTxt__c.field-meta.xml
<CustomField>
    <fullName>ssot__DeviceApplicationTemplateBodyTxt__c</fullName>
    <label>Device ApplicationTemplate Body</label>
    <length>60</length>
    <mktDataModelFieldAttributes>
        <definitionCreationType>Standard</definitionCreationType>
        <isDynamicLookup>false</isDynamicLookup>
        <refAttrDeveloperName>DeviceApplicationTemplateBodyTxt</refAttrDeveloperName>
        <usageTag>None</usageTag>
    </mktDataModelFieldAttributes>
    <type>Text</type>
</CustomField>