force-app/main/default/objects/ssot__DeviceApplicationTemplate__dlm/fields/ssot__ParentEngagementAssetId__c.field-meta.xml
<CustomField>
    <fullName>ssot__ParentEngagementAssetId__c</fullName>
    <label>Parent Engagement Asset</label>
    <length>60</length>
    <mktDataModelFieldAttributes>
        <definitionCreationType>Standard</definitionCreationType>
        <isDynamicLookup>false</isDynamicLookup>
        <refAttrDeveloperName>ParentEngagementAssetId</refAttrDeveloperName>
        <usageTag>None</usageTag>
    </mktDataModelFieldAttributes>
    <type>Text</type>
</CustomField>