force-app/main/default/objects/ssot__DeviceApplicationTemplate__dlm/fields/ssot__rel_1697761168402_end__c.field-meta.xml
<CustomField>
    <fullName>ssot__rel_1697761168402_end__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>DeviceApplicationTemplate_ParentEnga_rel</label>
    <referenceTo>ssot__DeviceApplicationTemplate__dlm</referenceTo>
    <relationshipLabel>DeviceApplicationTemplate_ParentEnga_rel</relationshipLabel>
    <relationshipName>rel_1697761168402_end</relationshipName>
    <type>Lookup</type>
</CustomField>